--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ python:
 # command to install dependencies
 install: "pip install -r requirements.txt"
 # command to run tests
-script: tests.py
+script: python tests.py
